Closed Bug 379383 Opened 18 years ago Closed 18 years ago

[FIX]Testcase from bug 348185 triggers ASSERTION: NS_BLOCK_HAS_FIRST_LETTER_STYLE state out of sync

Categories

(Core :: Layout, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha5

People

(Reporter: martijn.martijn, Assigned: bzbarsky)

References

Details

(Keywords: assertion, fixed1.8.1.8, testcase)

Attachments

(1 file)

The testcase from bug 348185 triggers 2 times this assertion for me, while loading: ###!!! ASSERTION: NS_BLOCK_HAS_FIRST_LETTER_STYLE state out of sync: 'GetPrevCon tinuation() || (GetStyleContext()->GetPseudoType() == nsCSSAnonBoxes::mozAnonymo usBlock) || (nsRefPtr<nsStyleContext>(GetFirstLetterStyle(presContext)) != nsnul l) == ((mState & NS_BLOCK_HAS_FIRST_LETTER_STYLE) != 0)', file c:/mozilla/mozill a/layout/generic/nsBlockFrame.cpp, line 5959 This assertions seems to have been added in the patch for bug 362901.
Attached patch Better assertSplinter Review
I'm not that happy with this, but I can't think of a better way to write this assert...
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #263405 - Flags: superreview?(dbaron)
Attachment #263405 - Flags: review?(dbaron)
OS: Windows XP → All
Priority: -- → P3
Hardware: PC → All
Summary: Testcase from bug 348185 triggers ASSERTION: NS_BLOCK_HAS_FIRST_LETTER_STYLE state out of sync → [FIX]Testcase from bug 348185 triggers ASSERTION: NS_BLOCK_HAS_FIRST_LETTER_STYLE state out of sync
Target Milestone: --- → mozilla1.9alpha5
Comment on attachment 263405 [details] [diff] [review] Better assert r+sr=dbaron, although you might want to mention {ib} splits as specifically disallowed in the comment
Attachment #263405 - Flags: superreview?(dbaron)
Attachment #263405 - Flags: superreview+
Attachment #263405 - Flags: review?(dbaron)
Attachment #263405 - Flags: review+
Checked in, with that change.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Blocks: 362901
Flags: blocking1.8.1.5?
Flags: blocking1.8.0.13?
Not needed for branch unless we take bug 362901
Flags: wanted1.8.1.x+
Flags: wanted1.8.0.x+
Flags: blocking1.8.1.5?
Flags: blocking1.8.0.13?
Fixed for 1.8.1.7 by checkin for bug 362901.
Keywords: fixed1.8.1.7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: