Fix assert to be more correct.  Bug 379383, r+sr=dbaron